w0.7 minor changes and first commit of intro video

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     <!--video-->
 
     <section id="videoSample">
-        <div class="w-100 border-bottom border-primary border-3" style="height: 400px">
-            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" class="mh-100">
-                <source src="#" type="video/webm">
+        <div class="w-100 border-bottom border-primary border-3 mh-500">
+            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" class="w-100">
+                <source src="img/consultoriosvid.webm" type="video/webm">
             </video>
         </div>
     </section>
@@ -120,7 +120,7 @@
     <!--empresa-->
     <!--empresa-->
 
-    <section id="laempresa" class="bg-secondary text-white py-3">
+    <section id="laempresa" class="bg-info text-white py-3">
         <div class="container">
             <blockquote class="blockquote text-center m-3">
                 <p class="mb-0">
