--- a/panel.html
+++ b/panel.html
@@ -373,7 +373,7 @@
 
     <div class="container-fluid mt-5">
         <div class="row">
-            <nav class="col-md-2 mt-5 bg-light sidebar">
+            <nav class="col-2 mt-5 bg-light sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column pt-2">
                         <li class="nav-item">
