w0.8 boton sumar profesional

--- a/panel.html
+++ b/panel.html
@@ -422,8 +422,14 @@
 
     <!--zona principal barra superior-->
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <div class="pt-3 pb-2 mb-3 border-bottom">
-            <h3>Dashboard</h3>
+        <div class="row">
+            <div class="pt-3 pb-2 mb-3 col-9 border-bottom">
+                <h3 class="mx-auto align-middle">Panel de Control</h3>
+            </div>
+            <div class="pt-3 pb-2 mb-3 col-3 border-bottom">
+                <button type="button" id="botonSumarProf" class="btn btn-outline-primary d-none">+ Sumar
+                    profesional</button>
+            </div>
         </div>
 
         <!--seccion tickets Publicos-->
