--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Log In</button>
+                    <button type="button" class="btn btn-primary" onclick= "obtenerDatos()" data-dismiss="modal" >Log In</button>
+                    
                 </div>
             </div>
         </div>
