Linkeo del archivo administrativo desde index.htm

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                     <button type="button" class="btn btn-primary" onclick= "obtenerDatos()" data-dismiss="modal" >Log In</button>
-                    
+
                 </div>
             </div>
         </div>
@@ -542,6 +542,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
+    <script src= "Administrativo.js"></script>
 
 </body>
 
