--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
-    <script src= "Administrativo.js"></script>
+    <script src= "TablasUsers.js"></script>
 
 </body>
 
