Funciones para crear nuevos profesionales

--- a/panel.html
+++ b/panel.html
@@ -953,7 +953,9 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="scriptsPanel.js"></script>
+    <script src='TablasUsers.js'></script>
     <script src='panelAdmApp.js'></script>
+    <script src='panelProfApp.js'></script>
 
 
 
