w0.19 improved footer en panel

--- a/panel.html
+++ b/panel.html
@@ -15,9 +15,7 @@
 
 </head>
 
-<body>
-
-
+<body class="d-flex flex-column">
 
 
     <div class="modal fade" id="modalProfesionalesXL" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -804,12 +802,10 @@
     <!--webfooter-->
 
 
-    <section class="bg-dark text-white">
-        <!--fondo verde solo para testear el ancho del footer claramente-->
-        <footer class="container mt-auto py-2 align-middle text-right">
+        <footer class="bg-dark text-white footer mt-auto py-2 align-middle text-right px-5">
             copyright 2019 Roberto coworking - dir - tel
         </footer>
-    </section>
+    
 
 
     <!--scripts-->
