--- a/panel.html
+++ b/panel.html
@@ -85,8 +85,8 @@
                                             <label for="especialidadProfesional"
                                                 class="col-2 col-form-label text-center">Especialidad</label>
                                             <div class="col-5">
-                                                <fieldset id="disModal3" disabled="disabled">
-                                                    <select class="form-control">
+                                                <fieldset  disabled="disabled">
+                                                    <select id="disModal3" class="form-control">
                                                         <option>Clinico</option>
                                                         <option>Psicologo</option>
                                                     </select>
@@ -126,8 +126,8 @@
                                             <label for="estadoProfesional"
                                                 class="col-2 col-form-label text-center">Estado</label>
                                             <div class="col-8">
-                                                <fieldset id="disModal4" disabled="disabled">
-                                                    <select id="disabledSelect" class="form-control">
+                                                <fieldset  disabled="disabled">
+                                                    <select id="disabledSelect" id="disModal4" class="form-control">
                                                         <option>Activo</option>
                                                         <option>Inactivo</option>
                                                     </select>
@@ -269,13 +269,13 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal"
                         onclick="funcionSalirModalSinGrabar()">Close</button>
-                    <button type="button" class="btn btn-primary" onclick="funcionModalGrabando()">Save changes</button>
-                </div>
+                    <button type="button" class="btn btn-primary" onclick="cargarDatosNuevosUsuarios()">Save changes</button>
+                   
+                </div> 
             </div>
         </div>
     </div>
 
-    <!--modal consultorios-->
     <!--modal consultorios-->
     <!--modal consultorios-->
 
