--- a/panel.html
+++ b/panel.html
@@ -72,7 +72,7 @@
                                                 <!-- en placeholder NOMBRE -->
                                             </div>
                                             <div class="col-2 my-auto">
-                                                <div class="custom-control custom-switch">
+                                                <div class="custom-control custom-switch" id="masterSwitchEditar2">
                                                     <input type="checkbox" class="custom-control-input"
                                                         id="switchEditar2">
                                                     <label class="custom-control-label"
@@ -82,10 +82,28 @@
                                         </div>
 
                                         <div class="form-group row">
+                                                <label for="nombreProfesional"
+                                                    class="col-2 col-form-label text-center">Apellido</label>
+                                                <div class="col-8">
+                                                    <input id="disModal3" class="form-control" type="text" placeholder=""
+                                                        readonly>
+                                                    <!-- en placeholder APELLIDO -->
+                                                </div>
+                                                <div class="col-2 my-auto">
+                                                    <div class="custom-control custom-switch" id="masterSwitchEditar3">
+                                                        <input type="checkbox" class="custom-control-input"
+                                                            id="switchEditar3">
+                                                        <label class="custom-control-label"
+                                                            for="switchEditar3">Editar</label>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        <div class="form-group row">
                                             <label for="especialidadProfesional"
                                                 class="col-2 col-form-label text-center">Especialidad</label>
                                             <div class="col-5">
-                                                <fieldset id="disModal3" disabled="disabled">
+                                                <fieldset id="disModal4" disabled="disabled">
                                                     <select class="form-control">
                                                         <option>Clinico</option>
                                                         <option>Psicologo</option>
@@ -102,11 +120,11 @@
                                                 </div>
                                             </div>
                                             <div class="col-2 my-auto">
-                                                <div class="custom-control custom-switch">
+                                                <div class="custom-control custom-switch" id="masterSwitchEditar4">
                                                     <input type="checkbox" class="custom-control-input"
-                                                        id="switchEditar3">
+                                                        id="switchEditar4">
                                                     <label class="custom-control-label"
-                                                        for="switchEditar3">Editar</label>
+                                                        for="switchEditar4">Editar</label>
                                                 </div>
                                             </div>
                                         </div>
@@ -126,7 +144,7 @@
                                             <label for="estadoProfesional"
                                                 class="col-2 col-form-label text-center">Estado</label>
                                             <div class="col-8">
-                                                <fieldset id="disModal4" disabled="disabled">
+                                                <fieldset id="disModal5" disabled="disabled">
                                                     <select id="disabledSelect" class="form-control">
                                                         <option>Activo</option>
                                                         <option>Inactivo</option>
@@ -134,25 +152,7 @@
                                                 </fieldset>
                                             </div>
                                             <div class="col-2 my-auto">
-                                                <div class="custom-control custom-switch">
-                                                    <input type="checkbox" class="custom-control-input"
-                                                        id="switchEditar4">
-                                                    <label class="custom-control-label"
-                                                        for="switchEditar4">Editar</label>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group row">
-                                            <label for="userName"
-                                                class="col-2 col-form-label text-center">Usuario</label>
-                                            <div class="col-8">
-                                                <input id="disModal5" class="form-control" type="text" placeholder=""
-                                                    readonly>
-                                                <!-- en placeholder USER -->
-                                            </div>
-                                            <div class="col-2 my-auto">
-                                                <div class="custom-control custom-switch">
+                                                <div class="custom-control custom-switch" id="masterSwitchEditar5">
                                                     <input type="checkbox" class="custom-control-input"
                                                         id="switchEditar5">
                                                     <label class="custom-control-label"
@@ -162,15 +162,15 @@
                                         </div>
 
                                         <div class="form-group row">
-                                            <label for="userPass"
-                                                class="col-2 col-form-label text-center">Password</label>
+                                            <label for="userName"
+                                                class="col-2 col-form-label text-center">Usuario</label>
                                             <div class="col-8">
                                                 <input id="disModal6" class="form-control" type="text" placeholder=""
                                                     readonly>
-                                                <!-- en placeholder PASSWORD -->
+                                                <!-- en placeholder USER -->
                                             </div>
                                             <div class="col-2 my-auto">
-                                                <div class="custom-control custom-switch">
+                                                <div class="custom-control custom-switch" id="masterSwitchEditar6">
                                                     <input type="checkbox" class="custom-control-input"
                                                         id="switchEditar6">
                                                     <label class="custom-control-label"
@@ -180,18 +180,15 @@
                                         </div>
 
                                         <div class="form-group row">
-                                            <label for="tipoCuenta"
-                                                class="col-2 col-form-label text-center">Tipo</label>
+                                            <label for="userPass"
+                                                class="col-2 col-form-label text-center">Password</label>
                                             <div class="col-8">
-                                                <fieldset id="disModal7" disabled="disabled">
-                                                    <select class="form-control">
-                                                        <option>Profesional</option>
-                                                        <option>Administrativo</option>
-                                                    </select>
-                                                </fieldset>
+                                                <input id="disModal7" class="form-control" type="text" placeholder=""
+                                                    readonly>
+                                                <!-- en placeholder PASSWORD -->
                                             </div>
                                             <div class="col-2 my-auto">
-                                                <div class="custom-control custom-switch">
+                                                <div class="custom-control custom-switch" id="masterSwitchEditar7">
                                                     <input type="checkbox" class="custom-control-input"
                                                         id="switchEditar7">
                                                     <label class="custom-control-label"
@@ -199,10 +196,58 @@
                                                 </div>
                                             </div>
                                         </div>
+
+                                        <div class="form-group row">
+                                                <label for="obraSoc"
+                                                    class="col-2 col-form-label text-center">Obra Social</label>
+                                                <div class="col-5">
+                                                    <fieldset id="disModal8" disabled="disabled">
+                                                        <select class="form-control">
+                                                            <option>OSDE</option>
+                                                            <option>Galeno</option>
+                                                        </select>
+                                                    </fieldset>
+                                                </div>
+                                                <div class="col-3 my-auto">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" value=""
+                                                            id="checkAgregarObraSoc">
+                                                        <label class="form-check-label" for="">
+                                                            Agregar Obra Social
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-2 my-auto">
+                                                    <div class="custom-control custom-switch" id="masterSwitchEditar8">
+                                                        <input type="checkbox" class="custom-control-input"
+                                                            id="switchEditar8">
+                                                        <label class="custom-control-label"
+                                                            for="switchEditar8">Editar</label>
+                                                    </div>
+                                                </div>
+                                            </div>
+    
+                                            <div id="campoAgregarObraSoc" class="form-group row d-none">
+                                                <div class="col-2">
+                                                </div>
+                                                <div class="col-6">
+                                                    <input id="agregarEspe" class="form-control" type="text" placeholder="">
+                                                </div>
+                                                <div class="col-2">
+                                                    <button type="button" class="btn btn-outline-success">Agregar</button>
+                                                </div>
+                                            </div>
                                     </form>
                                 </div>
                                 <div class="col-3">
                                     <img src="img/defaultUser.jpg" width="200px" alt="200px"> <!-- aca FOTO -->
+                                    <br>
+                                    <br>
+                                    <form>
+                                        <div class="form-group">
+                                            <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -302,7 +347,7 @@
                     </ul>
                     <h4 class="modal-title my-auto mx-5" id="consultoriosModalLabel"></h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"
-                        onclick="funcionSalirModalSinGrabar2()">
+                        onclick="funcionSalirModalSinGrabar()">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -593,7 +638,7 @@
                 </div>
                 <div class="col-3">
                     <button type="button" id="botonSumarProf" class="btn btn-outline-primary btn-sm d-none"
-                        data-toggle="modal" data-target="#modalProfesionalesXL" onclick="funcionRemoverReadonlys()">+
+                        data-toggle="modal" data-target="#modalProfesionalesXL" onclick="funcionBotonProfesionales()">+
                         Sumar
                         profesional</button>
                 </div>
