--- a/panel.html
+++ b/panel.html
@@ -210,7 +210,7 @@
                             <div class="row">
                                 <div class="col-12">
                                     <div class="table-responsive">
-                                        <table class="table table-striped table-sm">
+                                        <table  class="table table-striped table-sm">
                                             <thead>
                                                 <tr>
                                                     <th>IdConsultorio</th>
@@ -220,7 +220,7 @@
                                                     <th>Estado pago</th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
+                                            <tbody >
                                                 <!-- todos los tr y td siguiente no deberian existir, por ahora los dejo comentados para que se entienda donde van, se puede dejar asi hasta que la funcionalidad este completa -->
                                                 <!--  <tr>
                                                     <td></td>  aca ID CONSULTORIO 
@@ -641,7 +641,7 @@
                 </div>
                 <div class="col-9">
                     <div class="table-responsive">
-                        <table class="table table-striped table-sm">
+                        <table id="lista-profesionales" class="table table-striped table-sm">
                             <thead>
                                 <tr>
                                     <th>IdMedico</th>
@@ -650,7 +650,7 @@
                                     <th></th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody >
                                 <tr>
                                     <td>0001</td>
                                     <td>roberto</td>
@@ -658,6 +658,7 @@
                                     <td> <button type="button" class="btn btn-outline-secondary btn-sm py-0"
                                             data-toggle="modal" data-target="#modalProfesionalesXL">ver</button>
                                 </tr>
+                                
 
                             </tbody>
                         </table>
