--- a/panel.html
+++ b/panel.html
@@ -509,7 +509,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="linkProfesionales" onclick="funcionLinkProfesionales()">
+                            <a class="nav-link" href="#" id="linkProfesionales" onclick="funcionLinkProfesionales();cargarDatos(Profesionales)">
                                 <span data-feather="shopping-cart"></span>
                                 Profesionales
                             </a>
